# stanley_control_path_follower

./: .gitignore  LICENSE
arti_public_stanley_control/: CMakeLists.txt  arti_public_stanley_control_plugin.xml  package.xml
arti_public_stanley_control/cfg/: StanleyControl.cfg
arti_public_stanley_control/include/arti_public_stanley_control/: stanley_control.h  stanley_control_path_follower.h  stanley_control_path_follower_ackermann.h
arti_public_stanley_control/src/: stanley_control.cpp  stanley_control_path_follower.cpp  stanley_control_path_follower_ackermann.cpp
