<?xml version="1.0"?>
<package format="2">
  <name>arti_public_stanley_control</name>
  <version>0.1.0</version>
  <description>The arti_public_stanley_control package</description>

  <maintainer email="k.ml@arti-robots.com">Konstantin Mautner-Lassnig</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>arti_nav_core</build_depend>
  <build_depend>arti_nav_core_msgs</build_depend>
  <build_depend>arti_nav_core_utils</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>angles</build_export_depend>
  <build_export_depend>arti_nav_core</build_export_depend>
  <build_export_depend>arti_nav_core_msgs</build_export_depend>
  <build_export_depend>arti_nav_core_utils</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>arti_nav_core</exec_depend>
  <exec_depend>arti_nav_core_msgs</exec_depend>
  <exec_depend>arti_nav_core_utils</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <arti_nav_core plugin="${prefix}/arti_public_stanley_control_plugin.xml" />
  </export>
</package>
